# kittygram_final

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.production.yml  docker-compose.yml  kittygram_workflow.yml  main.py  pyproject.toml  pytest.ini  tests.yml
.github/workflows/: kittygram_workflow.yml  main.yml
backend/: .dockerignore  Dockerfile  pyproject.toml  requirements.txt
backend/cats/: serializers.py  tests.py
backend/config/: postgres.py  settings.py
backend/kittygram_backend/: config.py  settings.py  urls.py
frontend/: .dockerignore  Dockerfile
nginx/: Dockerfile  nginx.conf
tests/: test_connection.py  test_files.py
