[project]
name = "kittygram-final"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    "django==5.2.9",
    "django-health-check==3.21.0",
    "djangorestframework>=3.15.0",
    "djoser==2.2.0",
    "gunicorn>=22.0.0",
    "pillow==11.3.0",
    "psycopg2-binary==2.9.10",
    "pydantic-settings==2.12.0",
    "webcolors==25.10.0",
]

[dependency-groups]
dev = [
    "django-stubs>=6.0.1",
    "pyright>=1.1.408",
    "pytest-django>=4.12.0",
    "pyyaml>=6.0.3",
    "requests>=2.33.0",
    "ruff>=0.15.8",
]

[tool.pyright]
reportIncompatibleMethodOverride = false
reportIncompatibleVariableOverride = false

[tool.django-stubs]
django_settings_module = "kittygram_backend.settings"
