[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13, <3.14"
dependencies = [
    "django==5.2.9",
    "django-health-check==3.21.0",
    "djangorestframework>=3.15.0",
    "djoser==2.2.0",
    "gunicorn>=22.0.0",
    "pillow==11.3.0",
    "psycopg2-binary==2.9.10",
    "pydantic-settings==2.12.0",
    "pyyaml==6.0.3",
    "webcolors==25.10.0",
]

[dependency-groups]
dev = [
    "django-stubs>=6.0.1",
    "pyright>=1.1.408",
    "ruff>=0.15.8",
]

[tool.pyright]
reportIncompatibleMethodOverride = false
reportIncompatibleVariableOverride = false

[tool.django-stubs]
django_settings_module = "kittygram_backend.settings"

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
    "migrations",
]

# Same as Black.
line-length = 88
indent-width = 4

# Assume Python 3.13
target-version = "py313"

[tool.ruff.lint]
select = [
    "F",
    "E",
    "I",
    "N",
    "UP",
    "RUF",
    "B",
    "C4",
    "ISC",
    "PIE",
    "PT",
    "PTH",
    "SIM",
    "TID",
    "DJ"
]
ignore = [
    "RUF001",
    "RUF002",
    "RUF012",
    "DJ001"
]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

docstring-code-format = true
docstring-code-line-length = 88

[tool.ruff.lint.pydocstyle]
convention = "google"
